Chris - DevOrg/src/objects/Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ShortFeedback__c</fullName>
        <label>ShortFeedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Feedback-{0000}</displayFormat>
        <label>Feedback</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>